# kivy-chat-mach2

./: README.md  chat.kv  kivy_chat_app.py  pyproject.toml  utils.py
mach2/: __init__.py  __main__.py  authenticating_nlip_async_client.py  chat.kv  kivy_chat_app.py  models.py  services.py  utils.py  widgets.py
mach2/processors/: README.md  mistune_processor.py  plain_processor.py
mach2/renderers/: README.md  kivy_mistune_bbcode.py  kivy_pygments_bbcode.py
mach2/widgets/: bearer_popup.py  login_popup.py  text_input_with_shift_return.py
