[project]
name = "kivy-client-mach2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "kivy>=2.3.1",
    "nlip-sdk",
    "httpx==0.28.1",
    "mistune>=3.1.4",
    "pygments>=2.19.2",
]

[tool.uv.sources]
nlip-sdk = { git = "https://github.com/nlip-project/nlip_sdk.git" }
